# chambers-uas

./: .gitignore  ISSUES.md  Makefile  PRD.md  README.md  chambers_uas_v2.md  docker-compose.yml
bridge/: Dockerfile  bridge.sh
chambers/: .dockerignore  Cargo.toml  Dockerfile
chambers/.cargo/: config.toml
chambers/chambers-core/: Cargo.toml
chambers/chambers-core/src/: audit.rs  burn.rs  camera.rs  crypto.rs  error.rs  firewall.rs  lib.rs  manifest.rs  mavlink_proxy.rs  sealed_events.rs  session.rs  types.rs  v4l2_monitor.rs
chambers/chambers-daemon/: Cargo.toml
chambers/chambers-daemon/src/: main.rs
chambers/chambers-verify/: Cargo.toml
chambers/chambers-verify/src/: main.rs
gcs/: .dockerignore  Dockerfile  requirements.txt
gcs/gcs/: app.py  models.py
gcs/gcs/api/: audit.py  manifest.py  session.py  websocket.py
gcs/static/: index.html
geofence/: restricted_airspace_sample.geojson  test_geofence.geojson
manifests/: inspection_basic.toml  inspection_full.toml  test_minimal.toml
scripts/: run_simulation.sh  setup_netns.sh  setup_v4l2loopback.sh  verify_audit_log.sh
test/: conftest.py
test/rogue/: Dockerfile  rogue.py
