[workspace]
resolver = "2"
members = [
    "chambers-core",
    "chambers-daemon",
    "chambers-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MAVLink
mavlink = { version = "0.13", features = ["ardupilotmega"] }

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
rand = "0.8"

# Video
v4l = "0.14"

# Serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# System / OS
nix = { version = "0.29", features = ["fs", "net", "process", "signal"] }

# Networking
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1"

# Geospatial
geo = "0.28"
geojson = "0.24"

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Internal crates
chambers-core = { path = "chambers-core" }
