[package]
name = "chambers-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "chambers_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
mavlink.workspace = true
ring.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
# v4l is Linux-only (requires linux/videodev2.h)
# v4l = { workspace = true, optional = true }
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
tokio-tungstenite.workspace = true
sha2.workspace = true
base64.workspace = true
geo.workspace = true
geojson.workspace = true
thiserror.workspace = true
rand.workspace = true
futures-util.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
